--- a/portfolio.html
+++ b/portfolio.html
@@ -15,35 +15,37 @@
     />
   </head>
   <body>
-    <header class="header container">
-      <a href="index.html" class="logo"
-        >Web<span class="logo__studio">Studio</span></a
-      >
-      <nav>
-        <ul class="navigation list-style">
-          <li>
-            <a href="index.html" class="navigation__item">Agencja</a>
-          </li>
-          <li>
-            <a href="portfolio.html" class="navigation__item nav-highlight"
-              >Portfolio</a
-            >
-          </li>
-          <li><a href="#" class="navigation__item">Kontakt</a></li>
-        </ul>
-      </nav>
-      <a class="contact-item" href="mailto:info@example.com"
-        ><svg class="contact-item__icon" width="16" height="12">
-          <use href="./images/icons.svg#icon-envelope"></use>
-        </svg>
-        info@devstudio.com</a
-      >
-      <a class="contact-item" href="tel:+48111111111"
-        ><svg class="contact-item__icon" width="10" height="16">
-          <use href="./images/icons.svg#icon-telephone"></use>
-        </svg>
-        +48 111 111 111</a
-      >
+    <header class="wrapper">
+      <div class="header container">
+        <a href="index.html" class="logo"
+          >Web<span class="logo__studio">Studio</span></a
+        >
+        <nav>
+          <ul class="navigation list-style">
+            <li>
+              <a href="index.html" class="navigation__item">Agencja</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="navigation__item nav-highlight"
+                >Portfolio</a
+              >
+            </li>
+            <li><a href="#" class="navigation__item">Kontakt</a></li>
+          </ul>
+        </nav>
+        <a class="contact-item" href="mailto:info@example.com"
+          ><svg class="contact-item__icon" width="16" height="12">
+            <use href="./images/icons.svg#icon-envelope"></use>
+          </svg>
+          info@devstudio.com</a
+        >
+        <a class="contact-item" href="tel:+48111111111"
+          ><svg class="contact-item__icon" width="10" height="16">
+            <use href="./images/icons.svg#icon-telephone"></use>
+          </svg>
+          +48 111 111 111</a
+        >
+      </div>
     </header>
     <main class="section">
       <ul class="portfolio-buttons container">
