ostylowano menu mobilne z headera

--- a/index.html
+++ b/index.html
@@ -16,13 +16,38 @@
   </head>
   <body>
     <header class="wrapper">
+      <!-- MOBILE MENU -->
       <div class="mobile-menu d-none">
         <button class="toggle-menu">
           <svg class="modal__button-close-x" width="30" height="30">
             <use href="./images/icons.svg#icon-close-x"></use>
           </svg>
         </button>
+        <nav>
+          <ul class="mobile-menu__navigation list-style">
+            <li>
+              <a href="index.html" class="navigation__item">Agencja</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="navigation__item">Portfolio</a>
+            </li>
+            <li><a href="#" class="navigation__item">Kontakt</a></li>
+          </ul>
+        </nav>
+        <div class="mobile-menu__contacts">
+          <a class="contact-item" href="tel:+48111111111"> +48 111 111 111</a>
+          <a class="contact-item" href="mailto:info@example.com">
+            info@devstudio.com</a
+          >
+        </div>
+        <ul class="mobile-menu__social list-style">
+          <li class="mobile-menu__social-item">Instagram</li>
+          <li class="mobile-menu__social-item">Twitter</li>
+          <li class="mobile-menu__social-item">Facebook</li>
+          <li class="mobile-menu__social-item">LinkedIn</li>
+        </ul>
       </div>
+      <!-- HEADER SECTION -->
       <div class="header container">
         <a href="index.html" class="logo"
           >Web<span class="logo__studio">Studio</span></a
