--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main page</title>
+    <title>Moja Strona</title>
     <link href="css/modern-normalize.css" rel="stylesheet" />
     <link href="css/main.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -70,18 +70,20 @@
             <use href="./images/icons.svg#menu-opener"></use>
           </svg>
         </button>
-        <a class="contact-item" href="mailto:info@example.com"
-          ><svg class="contact-item__icon" width="16" height="12">
-            <use href="./images/icons.svg#icon-envelope"></use>
-          </svg>
-          info@devstudio.com</a
-        >
-        <a class="contact-item" href="tel:+48111111111"
-          ><svg class="contact-item__icon" width="10" height="16">
-            <use href="./images/icons.svg#icon-telephone"></use>
-          </svg>
-          +48 111 111 111</a
-        >
+        <div class="header__contact-wrapper">
+          <a class="contact-item" href="mailto:info@example.com"
+            ><svg class="contact-item__icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a
+          >
+          <a class="contact-item" href="tel:+48111111111"
+            ><svg class="contact-item__icon" width="10" height="16">
+              <use href="./images/icons.svg#icon-telephone"></use>
+            </svg>
+            +48 111 111 111</a
+          >
+        </div>
       </div>
     </header>
     <main>
