ostylowano section primary

--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
     </header>
     <main>
       <section class="section-primary">
-        <h1 class="section-primary__header">
-          EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
-        </h1>
-        <button type="button" class="section-primary__button" data-modal-open>
-          Zamów usługę
-        </button>
+        <div class="container">
+          <h1 class="section-primary__header section-primary__title-position">
+            EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+          </h1>
+          <button type="button" class="section-primary__button" data-modal-open>
+            Zamów usługę
+          </button>
+        </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button class="modal__button" data-modal-close>
