--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </li>
         </ul>
       </div>
-      <div class="container">
+      <div class="offer-container container">
         <h2 class="offer-header">Czym się zajmujemy</h2>
         <ul class="offer">
           <li class="offer__picture list-style">
