ogarnięto drugą sekcję

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </section>
       <div class="container section">
         <ul class="list-style section-secondary">
-          <li>
+          <li class="section-secondary__item">
             <div class="section-secondary__background">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-antenna"></use>
@@ -193,7 +193,7 @@
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li class="section-secondary__item">
             <div class="section-secondary__background">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-clock"></use>
@@ -205,7 +205,7 @@
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li class="section-secondary__item">
             <div class="section-secondary__background">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-diagram"></use>
@@ -217,7 +217,7 @@
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li class="section-secondary__item">
             <div class="section-secondary__background">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-astronaut"></use>
