--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
     </main>
     <footer class="footer">
       <div class="footer-style container">
-        <div>
-          <a href="index.html" class="logo"
+        <div class="footer__addresses">
+          <a href="index.html" class="logo contact-item-footer"
             >Web<span class="logo--footer">Studio</span></a
           >
           <ul class="footer__list">
@@ -465,12 +465,16 @@
               </address>
             </li>
             <li>
-              <a class="contact-item" href="mailto:info@example.com"
+              <a
+                class="contact-item contact-item-footer"
+                href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
             <li>
-              <a class="contact-item" href="tel:+48111111111"
+              <a
+                class="contact-item contact-item-footer"
+                href="tel:+48111111111"
                 >+48 111 111 111</a
               >
             </li>
