--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,38 @@
   </head>
   <body>
     <header class="wrapper">
+      <!-- MOBILE MENU -->
+      <div class="mobile-menu d-none">
+        <button class="toggle-menu">
+          <svg class="modal__button-close-x" width="30" height="30">
+            <use href="./images/icons.svg#icon-close-x"></use>
+          </svg>
+        </button>
+        <nav>
+          <ul class="mobile-menu__navigation list-style">
+            <li>
+              <a href="index.html" class="navigation__item">Agencja</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="navigation__item">Portfolio</a>
+            </li>
+            <li><a href="#" class="navigation__item">Kontakt</a></li>
+          </ul>
+        </nav>
+        <div class="mobile-menu__contacts">
+          <a class="contact-item" href="tel:+48111111111"> +48 111 111 111</a>
+          <a class="contact-item" href="mailto:info@example.com">
+            info@devstudio.com</a
+          >
+        </div>
+        <ul class="mobile-menu__social list-style">
+          <li class="mobile-menu__social-item">Instagram</li>
+          <li class="mobile-menu__social-item">Twitter</li>
+          <li class="mobile-menu__social-item">Facebook</li>
+          <li class="mobile-menu__social-item">LinkedIn</li>
+        </ul>
+      </div>
+      <!-- HEADER SECTION -->
       <div class="header container">
         <a href="index.html" class="logo"
           >Web<span class="logo__studio">Studio</span></a
@@ -33,18 +65,25 @@
             <li><a href="#" class="navigation__item">Kontakt</a></li>
           </ul>
         </nav>
-        <a class="contact-item" href="mailto:info@example.com"
-          ><svg class="contact-item__icon" width="16" height="12">
-            <use href="./images/icons.svg#icon-envelope"></use>
+        <button class="menu-opener">
+          <svg class="contact-item__icon" width="40" height="40">
+            <use href="./images/icons.svg#menu-opener"></use>
           </svg>
-          info@devstudio.com</a
-        >
-        <a class="contact-item" href="tel:+48111111111"
-          ><svg class="contact-item__icon" width="10" height="16">
-            <use href="./images/icons.svg#icon-telephone"></use>
-          </svg>
-          +48 111 111 111</a
-        >
+        </button>
+        <div class="header__contact-wrapper">
+          <a class="contact-item" href="mailto:info@example.com"
+            ><svg class="contact-item__icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a
+          >
+          <a class="contact-item" href="tel:+48111111111"
+            ><svg class="contact-item__icon" width="10" height="16">
+              <use href="./images/icons.svg#icon-telephone"></use>
+            </svg>
+            +48 111 111 111</a
+          >
+        </div>
       </div>
     </header>
     <main class="section">
@@ -260,8 +299,8 @@
     </main>
     <footer class="footer">
       <div class="footer-style container">
-        <div>
-          <a href="index.html" class="logo"
+        <div class="footer__addresses">
+          <a href="index.html" class="logo contact-item-footer"
             >Web<span class="logo--footer">Studio</span></a
           >
           <ul class="footer__list">
@@ -271,12 +310,16 @@
               </address>
             </li>
             <li>
-              <a class="contact-item" href="mailto:info@example.com"
+              <a
+                class="contact-item contact-item-footer"
+                href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
             <li>
-              <a class="contact-item" href="tel:+48111111111"
+              <a
+                class="contact-item contact-item-footer"
+                href="tel:+48111111111"
                 >+48 111 111 111</a
               >
             </li>
