dokończono portfolio grid

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <body>
     <header class="wrapper">
       <!-- MOBILE MENU -->
-      <div class="mobile-menu d-none">
+      <div class="mobile-menu d-none container">
         <button class="toggle-menu">
           <svg class="modal__button-close-x" width="30" height="30">
             <use href="./images/icons.svg#icon-close-x"></use>
           </svg>
         </button>
-        <nav>
-          <ul class="mobile-menu__navigation list-style">
+        <nav class="mobile-menu__navigation">
+          <ul class="mobile-menu__list list-style">
             <li>
               <a href="index.html" class="navigation__item">Agencja</a>
             </li>
