dodano zdjęcia i pozmieniano nazwy plików

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <ul class="team__list container">
           <li class="team__member">
             <img
-              src="images/product-designer.jpg"
+              src="images/product-designer@1.jpg"
               alt="Zdjęcie Product Designera"
               width="270"
               height="260"
@@ -307,7 +307,7 @@
           </li>
           <li class="team__member">
             <img
-              src="images/frontend-developer.jpg"
+              src="images/frontend-developer@1.jpg"
               alt="Zdjęcie Frontend Developera"
               width="270"
               height="260"
@@ -340,7 +340,7 @@
           </li>
           <li class="team__member">
             <img
-              src="images/marketing.jpg"
+              src="images/marketing@1.jpg"
               alt="Zdjęcie Marketingowca"
               width="270"
               height="260"
@@ -372,7 +372,7 @@
           </li>
           <li class="team__member">
             <img
-              src="images/ui-designer.jpg"
+              src="images/ui-designer@1.jpg"
               alt="Zdjecie UI Designera"
               width="270"
               height="260"
