--- a/portfolio.html
+++ b/portfolio.html
@@ -98,6 +98,7 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="images/technocrack.jpg 1x, images/technocrack@2.jpg 2x"
               src="images/technocrack.jpg"
               width="370"
               height="294"
