--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
         <ul class="team__list container">
           <li class="team__member">
             <img
+              srcset="
+                images/product-designer@1.jpg 1x,
+                images/product-designer@2.jpg 2x
+              "
               src="images/product-designer@1.jpg"
               alt="Zdjęcie Product Designera"
               width="270"
@@ -307,6 +311,10 @@
           </li>
           <li class="team__member">
             <img
+              srcset="
+                images/frontend-developer@1.jpg 1x,
+                images/frontend-developer@2.jpg 2x
+              "
               src="images/frontend-developer@1.jpg"
               alt="Zdjęcie Frontend Developera"
               width="270"
@@ -340,6 +348,7 @@
           </li>
           <li class="team__member">
             <img
+              srcset="images/marketing@1.jpg 1x, images/marketing@2.jpg 2x"
               src="images/marketing@1.jpg"
               alt="Zdjęcie Marketingowca"
               width="270"
@@ -372,6 +381,7 @@
           </li>
           <li class="team__member">
             <img
+              srcset="images/ui-designer@1.jpg 1x, images/ui-designer@2.jpg 2x"
               src="images/ui-designer@1.jpg"
               alt="Zdjecie UI Designera"
               width="270"
