zastosowano scrset oraz usunięto sztuczne wymiary

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,6 @@
             <img
               srcset="images/technocrack.jpg 1x, images/technocrack@2.jpg 2x"
               src="images/technocrack.jpg"
-              width="370"
               alt="laptop"
             />
             <div class="overlay">
@@ -120,9 +119,8 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="images/new-orlean.jpg 1x, images/new-orlean@2.jpg 2x"
               src="images/new-orlean.jpg"
-              width="370"
-              height="294"
               alt="koszykarze"
             />
             <div class="overlay">
@@ -144,9 +142,8 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="images/seafood.jpg 1x, images/seafood@2.jpg 2x"
               src="images/seafood.jpg"
-              width="370"
-              height="294"
               alt="logo restauracji"
             />
             <div class="overlay">
@@ -166,9 +163,11 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="
+                images/projekt-prime.jpg   1x,
+                images/projekt-prime@2.jpg 2x
+              "
               src="images/projekt-prime.jpg"
-              width="370"
-              height="294"
               alt="słuchawki"
             />
             <div class="overlay">
@@ -188,9 +187,11 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="
+                images/projekt-boxes.jpg   1x,
+                images/projekt-boxes@2.jpg 2x
+              "
               src="images/projekt-boxes.jpg"
-              width="370"
-              height="294"
               alt="pudełka"
             />
             <div class="overlay">
@@ -210,9 +211,8 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="images/inspirations.jpg 1x, images/inspirations@2.jpg 2x"
               src="images/inspirations.jpg"
-              width="370"
-              height="294"
               alt="monitor"
             />
             <div class="overlay">
@@ -232,9 +232,11 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="
+                images/limited-edition.jpg   1x,
+                images/limited-edition@2.jpg 2x
+              "
               src="images/limited-edition.jpg"
-              width="370"
-              height="294"
               alt="czasopismo"
             />
             <div class="overlay">
@@ -254,9 +256,8 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="images/projekt-lab.jpg 1x, images/projekt-lab@2.jpg 2x"
               src="images/projekt-lab.jpg"
-              width="370"
-              height="294"
               alt="etykieta"
             />
             <div class="overlay">
@@ -276,9 +277,11 @@
         <li class="portfolio-list__box">
           <div class="portfolio-list__image">
             <img
+              srcset="
+                images/growing-business.jpg   1x,
+                images/growing-business@2.jpg 2x
+              "
               src="images/growing-business.jpg"
-              width="370"
-              height="294"
               alt="piszący programista"
             />
             <div class="overlay">
