dodano wymiary z powrotem

--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,8 @@
               srcset="images/technocrack.jpg 1x, images/technocrack@2.jpg 2x"
               src="images/technocrack.jpg"
               alt="laptop"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -122,6 +124,8 @@
               srcset="images/new-orlean.jpg 1x, images/new-orlean@2.jpg 2x"
               src="images/new-orlean.jpg"
               alt="koszykarze"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -145,6 +149,8 @@
               srcset="images/seafood.jpg 1x, images/seafood@2.jpg 2x"
               src="images/seafood.jpg"
               alt="logo restauracji"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -169,6 +175,8 @@
               "
               src="images/projekt-prime.jpg"
               alt="słuchawki"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -193,6 +201,8 @@
               "
               src="images/projekt-boxes.jpg"
               alt="pudełka"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -214,6 +224,8 @@
               srcset="images/inspirations.jpg 1x, images/inspirations@2.jpg 2x"
               src="images/inspirations.jpg"
               alt="monitor"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -238,6 +250,8 @@
               "
               src="images/limited-edition.jpg"
               alt="czasopismo"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -259,6 +273,8 @@
               srcset="images/projekt-lab.jpg 1x, images/projekt-lab@2.jpg 2x"
               src="images/projekt-lab.jpg"
               alt="etykieta"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -283,6 +299,8 @@
               "
               src="images/growing-business.jpg"
               alt="piszący programista"
+              width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
