powrócono do width i height

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,6 +102,7 @@
               src="images/technocrack.jpg"
               alt="laptop"
               width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -124,6 +125,7 @@
               src="images/new-orlean.jpg"
               alt="koszykarze"
               width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
@@ -148,6 +150,7 @@
               src="images/seafood.jpg"
               alt="logo restauracji"
               width="370"
+              height="294"
             />
             <div class="overlay">
               <p class="overlay__description">
