--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             <use href="./images/icons.svg#icon-close-x"></use>
           </svg>
         </button>
-        <nav>
+        <nav class="mobile-menu__navigation">
           <ul class="mobile-menu__navigation list-style">
             <li>
               <a href="index.html" class="navigation__item">Agencja</a>
