--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </ul>
         </nav>
         <button class="menu-opener">
-          <svg class="contact-item__icon" width="40" height="40">
+          <svg class="contact-item__icon-opener" width="40" height="40">
             <use href="./images/icons.svg#menu-opener"></use>
           </svg>
         </button>
@@ -179,8 +179,8 @@
           </div>
         </div>
       </section>
-      <div class="container section">
-        <ul class="list-style section-secondary">
+      <div class="section container">
+        <ul class="section-secondary list-style">
           <li class="section-secondary__item">
             <div class="section-secondary__background">
               <svg width="70" height="70">
@@ -321,7 +321,7 @@
               height="260"
             />
 
-            <h3 class="team__name">John Doe</h3>
+            <h3 class="team__name">Jane Doe</h3>
             <p class="team__description">Frontend Developer</p>
             <div class="team__social">
               <div class="team__social--background">
