--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
           </ul>
         </nav>
         <button class="menu-opener">
-          <svg class="contact-item__icon" width="40" height="40">
+          <svg class="contact-item__icon-opener" width="40" height="40">
             <use href="./images/icons.svg#menu-opener"></use>
           </svg>
         </button>
