--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               width="270"
               height="260"
             />
-            <h3 class="team__name">John Doe</h3>
+            <h3 class="team__name">Jack Sparrow</h3>
             <p class="team__description">Product Designer</p>
             <div class="team__social">
               <div class="team__social--background">
@@ -321,7 +321,7 @@
               height="260"
             />
 
-            <h3 class="team__name">Jane Doe</h3>
+            <h3 class="team__name">Elizabeth Swann</h3>
             <p class="team__description">Frontend Developer</p>
             <div class="team__social">
               <div class="team__social--background">
@@ -354,7 +354,7 @@
               width="270"
               height="260"
             />
-            <h3 class="team__name">John Doe</h3>
+            <h3 class="team__name">William Turner</h3>
             <p class="team__description">Marketing</p>
             <div class="team__social">
               <div class="team__social--background">
@@ -387,7 +387,7 @@
               width="270"
               height="260"
             />
-            <h3 class="team__name">John Doe</h3>
+            <h3 class="team__name">Hector Barbarossa</h3>
             <p class="team__description">UI Designer</p>
             <div class="team__social">
               <div class="team__social--background">
